<resources>
    <string name="app_name">Skylight Flights</string>
    <string name="enter_password">Enter Password If Admin\n\nElse Press Enter</string>
    <string name="b_1">1</string>
    <string name="b_2">2</string>
    <string name="b_3">3</string>
    <string name="b_4">4</string>
    <string name="b_5">5</string>
    <string name="b_6">6</string>
    <string name="b_7">7</string>
    <string name="b_8">8</string>
    <string name="b_9">9</string>
    <string name="enter">Enter</string>
    <string name="b_0">0</string>
    <string name="backspace">backspace</string>
    <string name="book_a_new_ticket">Book A New Ticket</string>
    <string name="delete_an_existing_ticket">Delete An Existing Ticket</string>
    <string name="get_an_existing_ticket">Get an Existing Ticket</string>
    <string name="select_the_date_of_travel">Select The Date Of Travel</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="go">GO</string>
    <string name="landing_time">Landing Time (HHMM)</string>
    <string name="duration_of_flight">Duration Of Flight (In Minutes)</string>
    <string name="price_per_seat">Price Per Seat (in Rs)</string>
    <string name="name_of_flight_5_digits">Name Of Flight (5 digits)</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="departure_time">Departure Time(HHMM)</string>
    <string name="enter_flight_details">Enter Flight Details</string>
    <string name="add_flight">ADD FLIGHT</string>
    <string name="proceed_to_payment"> Enter Email Address </string>
    <string name="add_a_flight">Add A Flight</string>
    <string name="delete_a_flight">Delete A Flight</string>
    <string-array name="class_flight">
        <item>Economy Class</item>
        <item>Business Class</item>
        <item>First Class</item>
    </string-array>
</resources>
